--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
 	<packaging>war</packaging>
 
 	<name>TubeUpdates</name>
-	<url>http://www.springsource.org/spring-integration</url>
 
 	<prerequisites>
 		<maven>2.2.0</maven>
@@ -99,6 +98,12 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+
 		<!-- Spring Integration -->
 
 		<dependency>
@@ -119,6 +124,11 @@
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-mail</artifactId>
+			<version>${spring.integration.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-xml</artifactId>
 			<version>${spring.integration.version}</version>
 		</dependency>
 		<dependency>
@@ -168,6 +178,12 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.3</version>
 		</dependency>
 	</dependencies>
 </project>
